<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/formula1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <!-- add math formulas using MathJax-->
    <io.github.sidvenu.mathjaxview.MathJaxView
        android:id="@+id/formula1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:background="#FFFFFF"

        />


    <TextView
        android:id="@+id/height"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@+id/formula1Text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/height_cm"
        android:textColor="#1DE9B6" />

    <EditText
        android:id="@+id/heightIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formula1Text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/height"
        android:layout_toRightOf="@+id/height"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_height"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#7C7C7C"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@+id/height"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/weight_kg"
        android:textColor="#1DE9B6" />

    <EditText
        android:id="@+id/weightIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heightIn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/weight"
        android:layout_toRightOf="@+id/weight"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_weight"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#7C7C7C"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#1DE9B6"
        android:shadowColor="#1DE9B6"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#1DE9B6"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/BMI"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_below="@id/button"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/bmi"
        android:textColor="#1DE9B6" />

    <TextView
        android:id="@+id/result"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@id/button"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/BMI"
        android:layout_toRightOf="@id/BMI"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#7C7C7C" />


</RelativeLayout>