<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/formula1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />



    <!-- add math formulas using MathJax-->
    <io.github.sidvenu.mathjaxview.MathJaxView
        android:id="@+id/formula1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:background="#FFFFFF"

        />


    <TextView
        android:id="@+id/Na"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@+id/formula1Text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/na_mmol_l"
        android:textColor="#1DE9B6" />

    <EditText
        android:id="@+id/NaIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formula1Text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/Na"
        android:layout_toRightOf="@+id/Na"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_na"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#7C7C7C"
        android:textSize="14sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/Glu"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@+id/Na"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Glucose (mmol/l)"
        android:textColor="#1DE9B6" />

    <EditText
        android:id="@+id/GluIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NaIn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/Glu"
        android:layout_toRightOf="@+id/Glu"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Glucose"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#7C7C7C"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/Ure"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@+id/Glu"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Ureum (mmol/l)"
        android:textColor="#1DE9B6" />

    <EditText
        android:id="@+id/UreIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GluIn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/Ure"
        android:layout_toRightOf="@+id/Ure"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Ureum"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#7C7C7C"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#1DE9B6"
        android:shadowColor="#1DE9B6"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#1DE9B6"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/Osmo"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_below="@id/button"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Osmolarity"
        android:textColor="#1DE9B6" />

    <TextView
        android:id="@+id/result"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@id/button"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/Osmo"
        android:layout_toRightOf="@id/Osmo"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#7C7C7C" />


</RelativeLayout>